[package]
name = "jirepos-hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Jirepos <jirepos@gmail.com>"]

# [lib] 섹션은 패키지를 cdylib 형식으로 빌드할 것이라고 알린다. 
[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"



# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false